InfraPlatform/activemq/v7/cf-activemq.yaml
AWSTemplateFormatVersion: 2010-09-09
## VPC-id, Subnets ID, ClusterSharedNodeSecurityGroup name, Cluser Control Plane name and Control Plane SecurityGroup name to be updated as per requirements.
Description: ActiveMQ Setup CF Template - V7
 
Parameters:
  AppShortName:
    Type: String
    Description: AppShortName
 
  EnvName:
    Type: String
    Description: Environment
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-dev1
      - nprd-dev2
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c
 
  VpcId:
    Type: String
    Description: VpcId of your existing Virtual Private Cloud (VPC)
 
  VPCSubnetCidrAppAZ1:
    Type: String
    Description: VPC Subnet for App AZ1
 
  VPCSubnetCidrAppAZ2:
    Type: String
    Description: VPC Subnet for App AZ2
 
  VPCSubnetCidrAppAZ3:
    Type: String
    Description: VPC Subnet for App AZ3
 
  VPCSubnetIdappAZ1:
    Type: String
    Description: VPC Subnet id for App AZ1
 
  VPCSubnetIdappAZ2:
    Type: String
    Description: VPC Subnet id for App AZ2
 
  DeploymentServer01:
    Type: String
    Description: Deployment Server IP
 
  InstanceType:
    Type: String
    Description: InstanceType
 
  MQPassword:
    Type: String
    Description: Password for ActiveMQ
    NoEcho: true
 
  DeploymentMode:
    Type: String
    Description: Choose ActiveMQ Deployment Mode
    Default: "SINGLE_INSTANCE"
    AllowedValues:
      - SINGLE_INSTANCE
      - ACTIVE_STANDBY_MULTI_AZ
 
  EnableScheduler:
    Type: String
    Description: ActiveMQ Configuration
    Default: "true"
    AllowedValues:
      - "true"
      - "false"
 
  EngineVersion:
    Type: String
    Default: "5.18"
    Description: ActiveMQ Engine Version (as supported by AWS MQ)

  FirstMQDeployment:
    Type: String
    Default: "false"
    Description: Is this the first ActiveMQ deployment in this AWS account? (Creates AmazonMQ Log Resource Policy)
    AllowedValues:
      - "true"
      - "false"

  VpcCidr1:
    Description: VPC CIDR 1 IP Range
    Type: String
    Default: ""
  VpcCidr2:
    Description: VPC CIDR 2 IP Range
    Type: String
    Default: ""
  VpcCidr3:
    Description: VPC CIDR 3 IP Range
    Type: String
    Default: ""
  VpcCidr4:
    Description: VPC CIDR 4 IP Range
    Type: String
    Default: ""
  VpcCidr5:
    Description: VPC CIDR 5 IP Range
    Type: String
    Default: ""
  HCCVpceCidr:
    Description: HCC VPC Endpoint Subnet, Fixed CIDR Range from HCC
    Type: String
    Default: ""
 
Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasSubnetCidrAppAZ3: !Not [!Equals [!Ref VPCSubnetCidrAppAZ3, ""]]
  IsSingleInstance: !Equals [!Ref DeploymentMode, "SINGLE_INSTANCE"]
  IsActiveMQConfiguration: !Equals [!Ref EnableScheduler, "true"]
  IsFirstMQDeployment: !Equals [!Ref FirstMQDeployment, "true"]
  HasVpcCidr3: !Not [!Equals [!Ref VpcCidr3, ""]]
  HasVpcCidr2: !Not [!Equals [!Ref VpcCidr2, ""]]
  HasVpcCidr4: !Not [!Equals [!Ref VpcCidr4, ""]]
  HasVpcCidr5: !Not [!Equals [!Ref VpcCidr5, ""]]
  HasHCCVpceCidr: !Not [!Equals [!Ref HCCVpceCidr, ""]] 
 
Resources:
# Active MQ
## ActiveMQ SecurityGroup
  ActiveMQSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      VpcId: !Ref VpcId
      GroupDescription: Security Group for ActiveMQ
      GroupName: !Sub ${AppShortName}-${EnvName}-ActiveMQ
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-ActiveMQ
        - Key: IaCVersion
          Value: InfraPlatform-ActiveMQ-V7
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 61617
          ToPort: 61617
          CidrIp: !Ref VPCSubnetCidrAppAZ1
          Description: App Subnet AZ1
        - IpProtocol: tcp
          FromPort: 61617
          ToPort: 61617
          CidrIp: !Ref VPCSubnetCidrAppAZ2
          Description: App Subnet AZ2
        - !If
          - HasSubnetCidrAppAZ3
          - IpProtocol: tcp
            FromPort: 61617
            ToPort: 61617
            CidrIp: !Ref VPCSubnetCidrAppAZ3
            Description: Allow App Subnet AZ3
          - !Ref "AWS::NoValue"
        - IpProtocol: tcp
          FromPort: 8162
          ToPort: 8162
          CidrIp: !Ref DeploymentServer01
          Description: Deployment server 01

      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr1
          Description: VPC CIDR 1 IP Range
        - !If 
          - HasVpcCidr2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr2
            Description: VPC CIDR 2 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr3
            Description: VPC CIDR 3 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr4
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr4
            Description: VPC CIDR 4 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasVpcCidr5
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref VpcCidr5
            Description: VPC CIDR 5 IP Range
          - !Ref "AWS::NoValue"
        - !If
          - HasHCCVpceCidr
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HCCVpceCidr
            Description: HCC VPC Endpoint Subnet
          - !Ref "AWS::NoValue"

  BasicBroker:
    Type: 'AWS::AmazonMQ::Broker'
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]
    Properties:
      AutoMinorVersionUpgrade: true
      BrokerName: !Sub ${AppShortName}-${EnvName}-ActiveMQ
      Configuration: !If
        - IsActiveMQConfiguration
        - 
          Id: !Ref ActiveMQConfiguration
          Revision: !GetAtt ActiveMQConfiguration.Revision
        - !Ref "AWS::NoValue"
        
      DeploymentMode: !Ref DeploymentMode
      EngineType: ACTIVEMQ
      EngineVersion: !Ref EngineVersion
      HostInstanceType: !Ref InstanceType
      Logs:
        General: true
        Audit: true
      PubliclyAccessible: false
      SecurityGroups:
        - !GetAtt ActiveMQSecurityGroup.GroupId
      SubnetIds:
        !If
          - IsSingleInstance
          -
            - !Ref VPCSubnetIdappAZ1
          -
            - !Ref VPCSubnetIdappAZ1
            - !Ref VPCSubnetIdappAZ2
       
      Users:
        - Password: !Ref MQPassword
          Username: !Sub ${AppShortName}-${EnvName}-activemq-client
          ConsoleAccess: false
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-ActiveMQ-V7

  AmazonMQLogResourcePolicy:
    Type: AWS::Logs::ResourcePolicy
    Condition: IsFirstMQDeployment
    Properties:
      PolicyName: AmazonMQ-logs
      PolicyDocument: |
        {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": { "Service": "mq.amazonaws.com" },
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Resource": "arn:aws:logs:*:*:log-group:/aws/amazonmq/*"
            }
          ]
        }
 
  ActiveMQConfiguration:
    Type: AWS::AmazonMQ::Configuration
    Condition: IsActiveMQConfiguration
    Properties:
      Name: !Sub ${AppShortName}-${EnvName}-MQConfig
      EngineType: ACTIVEMQ
      EngineVersion: !Ref EngineVersion
      Description: Custom ActiveMQ config with scheduler support
      Data:
        ? "Fn::Base64"
        : |
            <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
            <broker schedulePeriodForDestinationPurge="10000" schedulerSupport="true" xmlns="http://activemq.apache.org/schema/core">
              <!--
              A configuration contains all of the settings for your ActiveMQ broker, in XML format (similar to ActiveMQ's activemq.xml file).
              You can create a configuration before creating any brokers. You can then apply the configuration to one or more brokers.

              You can use additional attributes for the broker element above. These attributes allow you to configure broker-wide settings.

              For more information, see Configuration and Amazon MQ Broker Configuration Parameters in the Amazon MQ Developer Guide:
              https://docs.aws.amazon.com/amazon-mq/latest/developer-guide/amazon-mq-broker-configuration-parameters.html
              -->
              <!--
              Mirrored queues let you send a copy of each message to a topic with a similar name automatically.
              For more information, see http://activemq.apache.org/mirrored-queues.html

              Virtual destinations let you configure advanced routing of messages between destinations.
              For more information, see http://activemq.apache.org/virtual-destinations.html
              -->
              <!--
              <destinationInterceptors>
                <mirroredQueue copyMessage="true" postfix=".qmirror" prefix=""/>
                <virtualDestinationInterceptor>
                  <virtualDestinations>
                    <virtualTopic name="&gt;" prefix="VirtualTopicConsumers.*." selectorAware="false"/>
                    <compositeQueue name="MY.QUEUE">
                      <forwardTo>
                        <queue physicalName="FOO"/>
                        <topic physicalName="BAR"/>
                      </forwardTo>
                    </compositeQueue>
                  </virtualDestinations>
                </virtualDestinationInterceptor>
              </destinationInterceptors>
              -->
              <!--
              By default, Amazon MQ optimizes for queues with fast consumers:
              Consumers are considered fast if they are able to keep up with the rate of messages generated by producers.
              Consumers are considered slow if a queue builds up a backlog of unacknowledged messages, potentially causing a decrease in producer throughput.
              To instruct Amazon MQ to optimize for queues with slow consumers, set the concurrentStoreAndDispatchQueues attribute to false.
              For more information, see https://docs.aws.amazon.com/amazon-mq/latest/developer-guide/ensuring-effective-amazon-mq-performance.html
              -->
              <!--
              <persistenceAdapter>
                <kahaDB  concurrentStoreAndDispatchQueues="false"/>
              </persistenceAdapter>
              -->
              <destinationPolicy>
                <policyMap>
                  <policyEntries>
                    <!--
                    gcInactiveDestinations is used to automatically purge inactive destinations
                    preventing them from unnecessarily using broker resources.

                    An 'inactive' destination is one that has no messages pending and no consumers connected.

                    For more information, see: http://activemq.apache.org/delete-inactive-destinations.html
                    -->
                    <policyEntry gcInactiveDestinations="true" inactiveTimoutBeforeGC="600000" topic="&gt;">
                      <!--
                      The constantPendingMessageLimitStrategy is used to prevent
                      slow topic consumers to block producers and affect other consumers
                      by limiting the number of messages that are retained

                      For more information, see: http://activemq.apache.org/slow-consumer-handling.html
                      -->
                      <pendingMessageLimitStrategy>
                        <constantPendingMessageLimitStrategy limit="1000"/>
                      </pendingMessageLimitStrategy>
                    </policyEntry>
                    <policyEntry gcInactiveDestinations="true" inactiveTimoutBeforeGC="600000" queue="&gt;"/>
                    <!--
                    Destination policies let you configure a rich set of behaviors for your queues and topics.
                    For more information, see http://activemq.apache.org/per-destination-policies.html
                    -->
                    <!--
                    <policyEntry topic="FOO.&gt;">
                      <dispatchPolicy>
                        <roundRobinDispatchPolicy/>
                      </dispatchPolicy>
                      <subscriptionRecoveryPolicy>
                        <lastImageSubscriptionRecoveryPolicy/>
                      </subscriptionRecoveryPolicy>
                    </policyEntry>
                    <policyEntry advisoryForConsumed="true" tempTopic="true"/>
                    <policyEntry advisoryForConsumed="true" tempQueue="true"/>
                    -->
                  </policyEntries>
                </policyMap>
              </destinationPolicy>
              <!--
              Typically, destinations are created automatically when they are used. Amazon MQ lets you create destinations when the broker is started.
              For more information, see http://activemq.apache.org/configure-startup-destinations.html
              -->
              <!--
              <destinations>
                <queue physicalName="FOO.BAR"/>
                <topic physicalName="SOME.TOPIC"/>
              </destinations>
              -->
              <!--
              You can control advanced ActiveMQ features using plugins.
              -->
              <plugins>
                <!--
                The Authorization plugin allows you to control the groups of users that are allowed to perform certain operations on your destinations.
                For more information, see http://activemq.apache.org/security.html
                -->
                <!--
                <authorizationPlugin>
                  <map>
                    <authorizationMap>
                      <authorizationEntries>
                        <authorizationEntry admin="guests,users" queue="GUEST.&gt;" read="guests" write="guests,users"/>
                        <authorizationEntry admin="guests,users" read="guests,users" topic="ActiveMQ.Advisory.&gt;" write="guests,users"/>
                      </authorizationEntries>
                      <tempDestinationAuthorizationEntry>
                        <tempDestinationAuthorizationEntry admin="tempDestinationAdmins" read="tempDestinationAdmins" write="tempDestinationAdmins"/>
                      </tempDestinationAuthorizationEntry>
                    </authorizationMap>
                  </map>
                </authorizationPlugin>
                -->
                <!--
                The Discarding DLQ plugin simplifies the configuration of your global dead-letter queue strategy.
                You can take advantage of a more granular per-destination control by using destination policies.
                For more information, see http://activemq.apache.org/message-redelivery-and-dlq-handling.html
                -->
                <!--
                <discardingDLQBrokerPlugin dropAll="true" dropTemporaryQueues="true" dropTemporaryTopics="true"/>
                -->
                <!--
                The Force Persistency Mode plugin can override the persistency mode set on messages.
                -->
                <!--
                <forcePersistencyModeBrokerPlugin persistenceFlag="true"/>
                -->
                <!--
                The Redelivery plugin extends the capabilities of destination policies with respect to message redelivery.
                For more information, see http://activemq.apache.org/message-redelivery-and-dlq-handling.html
                -->
                <!--
                <redeliveryPlugin fallbackToDeadLetter="true" sendToDlqIfMaxRetriesExceeded="true">
                  <redeliveryPolicyMap>
                    <redeliveryPolicyMap>
                      <redeliveryPolicyEntries>
                        <redeliveryPolicy maximumRedeliveries="4" queue="SpecialQueue" redeliveryDelay="10000"/>
                      </redeliveryPolicyEntries>
                      <defaultEntry>
                        <redeliveryPolicy initialRedeliveryDelay="5000" maximumRedeliveries="4" redeliveryDelay="10000"/>
                      </defaultEntry>
                    </redeliveryPolicyMap>
                  </redeliveryPolicyMap>
                </redeliveryPlugin>
                -->
                <!--
                The Statistics plugin lets you query broker or destination statistics by sending messages to the broker.
                For more information, see http://activemq.apache.org/statisticsplugin.html
                -->
                <!--
                <statisticsBrokerPlugin/>
                -->
                <!--
                The Timestamping plugin lets the broker use server-side time instead of client-provided time for messages.
                For more information, see http://activemq.apache.org/timestampplugin.html
                -->
                <!--
                <timeStampingBrokerPlugin ttlCeiling="86400000" zeroExpirationOverride="86400000"/>
                -->
              </plugins>
              <!--
              Network connectors let you connect brokers into networks of brokers.
              For more information, see Creating and Configuring an Amazon MQ Network of Brokers
              (https://docs.aws.amazon.com/amazon-mq/latest/developer-guide/amazon-mq-creating-configuring-network-of-brokers.html)
              in the Amazon MQ Developer Guide and also Networks of Brokers
              (http://activemq.apache.org/networks-of-brokers.html) in the ActiveMQ documentation.
              -->
              <!--
              <networkConnectors>
                <networkConnector name="myNetworkConnector" userName="commonUser" uri="masterslave:(ssl://b-1a2b3c4d-1.mq.region.amazonaws.com:61617,ssl://b-1a2b3c4d-2.mq.region.amazonaws.com:61617)"/>
              </networkConnectors>
              -->
            </broker>
